<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/screen_header">

        <SwitchPreferenceCompat
            app:key="fullscreen_on_map_tap"
            app:title="@string/fullscreen_on_map_tap" />

        <SwitchPreferenceCompat
            app:key="keep_screen_on"
            app:title="@string/keep_screen_on" />

        <SwitchPreferenceCompat
            app:key="tap_compass_to_rotate"
            app:title="@string/map_rotation"
            app:summary="@string/tap_compass_to_rotate" />

        <ListPreference
            app:key="max_zoom_level"
            app:title="@string/max_zoom_level"
            app:entries="@array/max_zoom_level_entries"
            app:entryValues="@array/max_zoom_level_values"
            app:defaultValue="17"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="open_topo_map_source"
            app:title="@string/open_topo_map_source"
            app:entries="@array/open_topo_map_source_entries"
            app:entryValues="@array/open_topo_map_source_values"
            app:defaultValue="opentopomap"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/cache_header">

        <Preference
            app:key="cache_settings"
            app:title="@string/cache_settings"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:key="ors_section"
        app:title="@string/ors">

        <org.nitri.opentopo.view.OrsKeyPreference
            app:key="ors_set_key"
            app:title="@string/ors"
            android:summary="@string/ors_key_prompt"
            app:widgetLayout="@layout/preference_ors_info_widget" />

        <Preference
            app:key="ors_erase_key"
            app:title="@string/erase_key"
            android:visible="false" />

        <Preference
            app:key="ors_select_profile"
            app:title="@string/ors_profile"
            android:summary="driving-car"
            android:visible="false" />
    </PreferenceCategory>


</PreferenceScreen>
