<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_gpx"
        android:icon="@drawable/ic_action_gpx"
        android:title="@string/gpx"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_location"
        android:icon="@drawable/ic_action_location"
        android:title="@string/location"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_follow"
        android:icon="@drawable/ic_action_follow"
        android:title="@string/follow"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_no_follow"
        android:icon="@drawable/ic_action_follow_active"
        android:title="@string/follow"
        app:showAsAction="ifRoom"/>

</menu>